Added: migration, logs, shutdown, tests. Bugfixed
